[package]
name = "check_decaf"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b_simd = { version = "1.0.2", default-features = false }
cargo = "0.79.0"
decaf377 = { version = "0.9.0", default-features = false, features = [
    "u32_backend",
] }
decaf377-rdsa = { version = "0.10.0", default-features = false, features = [
    "u32_backend",
] }
flamegraph = "0.6.5"
hex = "0.4.3"
install = "0.0.0"

[features]
default = ["std"]
std = ["hex/std", "blake2b_simd/std", "decaf377/std", "decaf377-rdsa/std"]

[patch.crates-io]
decaf377 = { path = "../decaf377" }
decaf377-rdsa = { path = "../decaf377-rdsa" }
